# vkit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  MaterialGraph.json  README.md
assets/shaders/: mesh.frag  mesh.vert  prefilter_diffuse_ibl.comp  prefilter_specular_ibl.comp  prifilter_specular_ibl.comp  primitive.frag  primitive.vert  primitive_diffuse.frag  primitive_diffuse_specular.frag  primitive_material.frag  primitive_principled_bsdf.frag  procedural_texture.comp  ray_sphere.vert  ray_sphere_diffuse.frag  ray_sphere_diffuse_specular.frag  ray_sphere_material.frag  ray_sphere_principled_bsdf.frag  shader.frag  shader.vert  skybox.frag  skybox.vert
assets/shaders/ibl/: brdf_lut.comp  diffuse_ibl.comp  specular_ibl.comp
assets/shaders/material/: primitive.vert  primitive_material_bsdf.frag  primitive_material_bsdf.vert  ray_sphere.vert  ray_sphere_material_bsdf.frag
cmake/: toolchain-mingw-w64.cmake
docs/: class_diagram.puml  component_diagram.drawio  shadows.md
examples/: mech_drone_mixed_material.mgraph  mechdrone.mgraph  noise_normalmap.mgraph
ext/: CMakeLists.txt  vk_mem_alloc.cpp
ext/imnodes/: imnodes.cpp  imnodes.h  imnodes_internal.h
shaders/: evaluation.glsl  imgui.frag  imgui.vert  light_gizmo.frag  light_gizmo.vert  outline.frag  outline.vert  primitive.vert  primitive_debug.frag  primitive_debug.vert  primitive_diffuse.frag  primitive_diffuse_specular.frag  primitive_material.frag  primitive_principled_bsdf.frag  ray_sphere.glsl  ray_sphere.vert  ray_sphere_debug.frag  ray_sphere_diffuse.frag  ray_sphere_diffuse_specular.frag  ray_sphere_material.frag  ray_sphere_principled_bsdf.frag  shadow.vert  skybox.frag  skybox.vert
shaders/common/: bindless.glsl  environment.glsl  light_types.glsl  lights.glsl  primitive_types.glsl  primitive_vertex_pulling.glsl  shadow.glsl
shaders/ibl/: brdf_lut.comp  diffuse_ibl.comp  math_ibl.glsl  specular_ibl.comp
shaders/material/: diffuse.glsl  diffuse_specular.glsl  mix_material.glsl  principled_bsdf.glsl  principled_bsdf_math.glsl
shaders/operators/: channel_adjust.comp  channel_remap.comp  heightmap.comp  mix.comp  normalmap.comp  sobel.comp  tint.comp
shaders/procedural/: fractal.comp  noise.comp  pattern.comp
src/: app.cpp  app.hpp  app_types.hpp  asset.cpp  asset.hpp  bindless_set_manager.hpp  command_block.cpp  command_block.hpp  compute_shader_program.cpp  compute_shader_program.hpp  dear_imgui.cpp  dear_imgui.hpp  descriptor_buffer.cpp  descriptor_buffer.hpp  gpu.cpp  gpu.hpp  main.cpp  material_set_manager.hpp  model.hpp  pipeline.cpp  pipeline.hpp  render_target.hpp  resource_buffering.hpp  scoped.hpp  scoped_waiter.hpp  shader_program.cpp  shader_program.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  ui.hpp  vertex.hpp  vma.cpp  vma.hpp  win_print_compat.cpp  window.cpp  window.hpp
src/glsl/: bindless.glsl  light.glsl  material.glsl  materials.glsl  mesh.frag  mesh.vert  mesh_pcs.glsl  pcs.glsl  prefilter_diffuse_ibl.comp  prefilter_specular_ibl.comp  prifilter_diffuse_ibl.comp  prifilter_specular_ibl.comp  primitive.frag  primitive.vert  procedural_texture.comp  shader.frag  shader.vert  skybox.frag  skybox.vert  skybox_pcs.glsl  types.glsl  vertex.glsl  vertex_pulling.glsl
src/glsl/environment/: brdf_lut.comp  diffuse_ibl.comp  ibl_math.glsl  math_ibl.glsl  specular_ibl.comp
src/glsl/material/: environment_layouts.glsl  material_bsdf.frag  material_bsdf.vert  material_bsdf_layers.glsl  material_bsdf_layouts.glsl  material_bsdf_math.glsl  math_bsdf.glsl  primitive.vert  primitive_material_bsdf.frag  ray_sphere.vert  ray_sphere_material_bsdf.frag  types.glsl  vertex_pulling.glsl
src/gltf/: asset.cpp  asset.hpp  asset_error.cpp  asset_error.hpp  asset_external_buffers.cpp  asset_external_buffers.hpp  helpers.cpp  helpers.hpp  primitive_attribute_buffers.cpp  primitive_attribute_buffers.hpp
src/scoped/: scoped.hpp
src/util/: scoped.hpp
src/vkit/animation/: animation.hpp  animator.cpp  animator.hpp
src/vkit/asset/: asset.hpp  asset_manager.hpp  gltf_storage.hpp  material_info.hpp  shaders.hpp  util.cpp  util.hpp
src/vkit/compute/: async_compute.cpp  async_compute.hpp  compute_output_dispatcher.cpp  compute_output_dispatcher.hpp  heightmap_dispatcher.cpp  heightmap_dispatcher.hpp  mix_dispatcher.cpp  mix_dispatcher.hpp  noise_dispatcher.cpp  noise_dispatcher.hpp  normalmap_dispatcher.cpp  normalmap_dispatcher.hpp  sobel_dispatcher.cpp  sobel_dispatcher.hpp  tint_dispatcher.cpp  tint_dispatcher.hpp  util.cpp  util.hpp
src/vkit/controller/: asset.cpp  asset.hpp  camera.hpp  environment.cpp  environment.hpp  scene.cpp  scene.hpp  workflow.cpp  workflow.hpp
src/vkit/dataformat/: dataformat.cpp  dataformat.hpp  vertex_format.cpp  vertex_format.hpp
src/vkit/environment/: environment.hpp  manager.cpp  manager.hpp
src/vkit/graph/: graph.cpp  graph.hpp  link.cpp  link.hpp  node.cpp  node.hpp  pin.cpp  pin.hpp
src/vkit/graphics/: allocation.hpp  bindless_texture_manager.hpp  buffer.hpp  command.hpp  descriptor_buffer.hpp  descriptor_set_layout.hpp  device.cpp  device.hpp  device_buffer.cpp  device_buffer.hpp  draw_indirect.hpp  enums.cpp  enums.hpp  frame.hpp  image.hpp  instance.cpp  instance.hpp  mapped_buffer.hpp  pipeline.hpp  pipeline_layout.hpp  push_constant_range.hpp  shader_module.cpp  shader_module.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  texture_loader.cpp  texture_loader.hpp  util.cpp  util.hpp
src/vkit/imgui/: imgui_host.cpp  imgui_host.hpp  imgui_renderer.cpp  imgui_renderer.hpp  imgui_window.cpp  imgui_window.hpp  imgui_window_manager.cpp  imgui_window_manager.hpp  window_imgui_host.cpp  window_imgui_host.hpp
src/vkit/item/: item.hpp  storage.hpp  storage_item.hpp
src/vkit/material/: diffuse.hpp  diffuse_specular.hpp  manager.cpp  manager.hpp  material.hpp  (+6 more)
src/vku/: commands.cpp  commands.hpp  constants.hpp  queue.hpp
src/vulkan/: command_block.cpp  command_block.hpp  frame.hpp  gpu.cpp  gpu.hpp  util.cpp  util.hpp
(+291 files in other folders)
